# poker_agent

./: .env.example  .gitignore  README.md  install.bat  install.sh  pyproject.toml
src/poker_agent/: __init__.py  main.py
src/poker_agent/agent/: __init__.py  message.py  orchestrator.py
src/poker_agent/config/: settings.py
src/poker_agent/domain/: __init__.py  hand.py  prompts.py  user_profile.py
src/poker_agent/llm/: __init__.py  anthropic.py  base.py  config.py  openai.py
src/poker_agent/tools/: __init__.py  base.py
src/poker_agent/tools/analysis/: __init__.py  stats.py
src/poker_agent/tools/pt4/: __init__.py  connection.py  queries.py  schema_search.py  schemas.py  utils.py
src/poker_agent/tools/pt4/schema_docs/: cash_player_columns_definition.txt  handstats_definitions.txt  pt4_querying_guide.md
tests/: __init__.py  test_hand.py  test_pt4_utils.py  test_schema_search.py  test_tools.py  test_user_profile.py
