[project]
name = "poker-agent"
version = "0.1.0"
description = "A CLI-based conversational AI agent for professional poker players"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai~=1.50.0",
    "anthropic~=0.40.0",
    "psycopg[binary]~=3.2.0",
    "rich~=13.9.0",
    "prompt-toolkit~=3.0.48",
    "pydantic~=2.9.0",
    "pydantic-settings~=2.6.0",
    "python-dotenv~=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
]

[project.scripts]
poker-agent = "poker_agent.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
